@@ -1,5 +1,7 @@
 -r requirements.txt
 pytest==6.1.2
+pytest-asyncio>=0.15.0
 pytest-cov==2.12.0
+aiosqlite
 twine==3.2.0
 wheel==0.35.1
